--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,7 @@
 .box {
     width: 340px;
     height: 50px;
-    border: 3px solid rgb(162, 162, 162);
+    border: 3px solid rgb(76, 148, 255);
     background-color: rgb(255, 255, 255);
     position: fixed;
     bottom: 35px;
@@ -14,10 +14,11 @@
     width: 45px;
     height: 43px;
     position: absolute;
-    border: 3px solid rgb(195, 195, 195);
+    border: 3px solid rgb(165, 165, 165);
     box-sizing: border-box;
     border-radius: 5px;
     background-size: contain;
     background-repeat: no-repeat;
     background-color: white;
+    padding: 22px;
 }
