--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,7 +17,7 @@
     border: 3px solid rgb(165, 165, 165);
     box-sizing: border-box;
     border-radius: 5px;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-color: white;
     padding: 22px;
